Changes Path.of(String) to Paths.get(String)